--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "emu-furniture-backend",
   "version": "1.0.0",
   "scripts": {
@@ -7,13 +7,15 @@
     "build": "tsc"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@prisma/client": "^5.10.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "prisma": "^5.10.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
     "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
