--- a/backend/package.json
+++ b/backend/package.json
@@ -19,5 +19,11 @@
     "@types/node": "^20.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
+  },
+  
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
+
+  
 }
