--- a/backend/package.json
+++ b/backend/package.json
@@ -8,22 +8,23 @@
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.3",
     "prisma": "^5.10.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   },
-  
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   }
-
-  
 }
