--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.3",
-    "prisma": "^5.10.2"
+    "prisma": "^5.10.2",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
